--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="fontMain">#F65E69</color>
     <color name="btnGoogle">#3B5897</color>
+    <color name="lightGray">#AEA4A4</color>
 </resources>
