--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logoXaJo" />
+            app:srcCompat="@drawable/logoxajo" />
 
         <TextView
             android:id="@+id/textView"
@@ -143,12 +143,12 @@
             android:backgroundTint="@color/fontMain"
             android:text="Sing Up"
             app:cornerRadius="10dp"
-            app:layout_constraintEnd_toStartOf="@+id/button5"
+            app:layout_constraintEnd_toStartOf="@+id/btnGoogleSignIn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBox" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnGoogleSignIn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -194,7 +194,8 @@
             android:layout_height="36dp"
             app:srcCompat="@drawable/ic_eye"
             tools:layout_editor_absoluteX="316dp"
-            tools:layout_editor_absoluteY="355dp" />
+            tools:layout_editor_absoluteY="355dp"
+            tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
