--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -192,9 +192,12 @@
             android:id="@+id/imageView2"
             android:layout_width="39dp"
             android:layout_height="36dp"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
+            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
+            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
             app:srcCompat="@drawable/ic_eye"
-            tools:layout_editor_absoluteX="316dp"
-            tools:layout_editor_absoluteY="355dp"
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
