--- a/app/src/main/res/layout/activity_recover_pass.xml
+++ b/app/src/main/res/layout/activity_recover_pass.xml
@@ -54,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logoXaJo" />
+            app:srcCompat="@drawable/logoxajo" />
 
         <TextView
             android:id="@+id/textView"
