--- a/app/src/main/res/layout/activity_recover_pass.xml
+++ b/app/src/main/res/layout/activity_recover_pass.xml
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSingIn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
@@ -88,7 +88,7 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/txtNoPass"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
@@ -100,7 +100,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/btnSingIn" />
 
         <EditText
             android:id="@+id/editTextText2"
