--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,20 +14,21 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="50dp"
             android:text="Sign Up"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="45dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextTextPassword"
@@ -69,20 +70,21 @@
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="107dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
             android:text="Email"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="171dp" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
         <TextView
             android:id="@+id/textView5"
@@ -99,20 +101,21 @@
             app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/cbRemember"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="50dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
             android:text="I agree to the Terms of Services and Privacy Policy."
             android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="417dp" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/txtNoPass"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
@@ -121,48 +124,52 @@
             android:text="Have an a Account ? Sign In"
             android:textAlignment="center"
             android:textColor="@color/lightGray"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.01"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="566dp" />
+            app:layout_constraintTop_toBottomOf="@+id/btnSingIn" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSingIn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="50dp"
             android:backgroundTint="@color/fontMain"
             android:text="Continue"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="477dp" />
+            app:layout_constraintTop_toBottomOf="@+id/cbRemember" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
             android:text="Name"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="88dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="50dp"
             android:text="Password"
             android:textColor="@color/fontMain"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="346dp" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
         <EditText
             android:id="@+id/editTextTextPassword2"
