--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <!-- Contenedor principal para los fragments -->
+    <!-- Contenido principal -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- FrameLayout para cargar los fragments -->
+        <!-- Contenedor para Fragments -->
         <FrameLayout
             android:id="@+id/container_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <!-- Toolbar con el ícono de hamburguesa para abrir el menú lateral -->
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/colorPrimary"
-            android:title="Mi Aplicación"
-            android:titleTextColor="@android:color/white"
-            android:layout_alignParentTop="true"
-            android:elevation="4dp"
-            tools:ignore="MissingConstraints" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Menú lateral o Drawer -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/drawer_menu"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:layout_marginTop="56dp"
-        android:background="@android:color/white" />
+    <!-- Menú lateral -->
+    <include
+        layout="@layout/drawer_menu_layout"
+        android:layout_gravity="start" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
