menu lateral perfil

--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -9,9 +9,10 @@
 
     <!-- Icono Menú (parte superior izquierda) -->
     <ImageView
-        android:id="@+id/ivMenu"
+        android:id="@+id/btnOpenMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="Abrir menú"
         android:src="@drawable/ic_menu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,25 +26,13 @@
         android:text="Perfil"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/ivMenu"
-        app:layout_constraintStart_toEndOf="@+id/ivMenu"
-        app:layout_constraintTop_toTopOf="@+id/ivMenu"
+        app:layout_constraintBottom_toBottomOf="@+id/btnOpenMenu"
+        app:layout_constraintStart_toEndOf="@+id/btnOpenMenu"
+        app:layout_constraintTop_toTopOf="@+id/btnOpenMenu"
         app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Icono Editar (parte superior derecha) -->
-    <ImageView
-        android:id="@+id/ivEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_edit"
-        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.898"
-        app:layout_constraintStart_toEndOf="@+id/tvTitle"
-        app:layout_constraintTop_toTopOf="@+id/tvTitle"
-        app:layout_constraintVertical_bias="0.0" />
 
-    <!-- Imagen de perfil -->
+
 
     <!-- Label: Nombre -->
     <ImageView
