--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -26,7 +26,7 @@
         android:textAlignment="center"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
-        app:layout_constraintStart_toEndOf="@+id/ibtnMenu"
+        app:layout_constraintStart_toEndOf="@+id/btnOpenMenu"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@id/txtMenuCal" />
 
     <ImageButton
-        android:id="@+id/ibtnMenu"
+        android:id="@+id/btnOpenMenu"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:backgroundTint="#00FFFFFF"
@@ -83,6 +83,7 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtDay"
         tools:layout_editor_absoluteY="439dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
