--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:ignore="ExtraText">
+    android:layout_height="match_parent">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        tools:ignore="ExtraText">
 
     <!-- Icono Menú (parte superior izquierda) -->
     <ImageView
@@ -36,7 +40,7 @@
 
     <!-- Label: Nombre -->
     <ImageView
-        android:id="@+id/profileImage"
+        android:id="@+id/profileicon"
         android:layout_width="132dp"
         android:layout_height="117dp"
         android:layout_marginTop="44dp"
@@ -63,9 +67,9 @@
         android:ems="10"
         android:inputType="text"
         android:text="Jhoanna Doe"
-        app:layout_constraintEnd_toEndOf="@+id/profileImage"
-        app:layout_constraintStart_toStartOf="@+id/profileImage"
-        app:layout_constraintTop_toBottomOf="@+id/profileImage" />
+        app:layout_constraintEnd_toEndOf="@+id/profileicon"
+        app:layout_constraintStart_toStartOf="@+id/profileicon"
+        app:layout_constraintTop_toBottomOf="@+id/profileicon" />
 
     <!-- Label: Email -->
     <TextView
@@ -163,3 +167,4 @@
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
