--- a/app/src/main/res/layout/drawer_menu_layout.xml
+++ b/app/src/main/res/layout/drawer_menu_layout.xml
@@ -101,7 +101,7 @@
         app:layout_constraintTop_toTopOf="@id/calendaricon" />
 
     <ImageView
-        android:id="@+id/alertas"
+        android:id="@+id/alertasicon"
         android:layout_width="57dp"
         android:layout_height="48dp"
         android:layout_marginStart="52dp"
@@ -111,19 +111,19 @@
         app:layout_constraintTop_toBottomOf="@id/calendaricon" />
 
     <TextView
-        android:id="@+id/textViewAlertas"
+        android:id="@+id/textAlertas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="Alertas >"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@id/alertas"
-        app:layout_constraintStart_toEndOf="@id/alertas"
-        app:layout_constraintTop_toTopOf="@id/alertas"
+        app:layout_constraintBottom_toBottomOf="@id/alertasicon"
+        app:layout_constraintStart_toEndOf="@id/alertasicon"
+        app:layout_constraintTop_toTopOf="@id/alertasicon"
         app:layout_constraintVertical_bias="0.437" />
 
     <ImageView
-        android:id="@+id/iv_settings"
+        android:id="@+id/settingsicon"
         android:layout_width="97dp"
         android:layout_height="81dp"
         android:layout_marginBottom="40dp"
